# sfsg67

./: .gitignore  AGENTS.md  ARCHITECTURE_DECISION_RECORD.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: src.instructions.md  tests.instructions.md
.github/workflows/: ci.yml
benchmarks/: run.py
corpus/: schema.json
corpus/gold/: basic_sentences.json  clitic_cases.json  evaluation_cases.json  reference_cases.json  root_pattern_pairs.json  signification_types.json
docs/: api_stability.md  architecture.md  charter.md  roadmap.md
tests/: test_analyze_word.py  test_arabic_engine.py  test_augmentation.py  test_bpe_serialization.py  test_bpe_tokenizer.py  test_bpe_trainer.py  test_clitic_rules.py  test_compositional.py  test_constraint_envelope.py  test_corpus_evaluation.py  test_corpus_stores.py  test_dag_interning.py  test_epistemic_engine.py  test_epistemic_principles.py  test_event_layer.py  test_formal_chain.py  test_fractal_storage.py  test_gold_corpus.py  test_graph_economy.py  test_grapheme_atoms.py  test_lexical_node.py  test_morph_family.py  test_normalization_profiles.py  test_particle_sets.py  test_phase9_nuclei.py  test_phonological_sets.py  test_pre_compositional.py  test_pretokenizer.py  test_relation_registry.py  test_relational_container.py  test_root_pattern.py  test_sign_signified.py  test_span_contract.py  test_syllable_layer.py  test_tokenizer.py  test_unicode_value.py  test_unigram_serialization.py  test_unigram_tokenizer.py  test_unigram_trainer.py  test_upper_ontology.py  (+2 more)
(+101 files in other folders)
