[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "creative-tokenizer"
version = "0.1.0"
description = "Arabic-first tokenizer scaffold with stable spans and optional clitic segmentation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "GitHub Copilot" }
]
keywords = ["arabic", "tokenizer", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing :: Linguistic"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
creative-tokenizer = "creative_tokenizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/creative_tokenizer"]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["creative_tokenizer"]
